# fox-zero-one

./: Anchor.toml  README.md  package-lock.json  package.json
programs/f0x01/: Cargo.toml
programs/f0x01/src/: error.rs  lib.rs  utils.rs
programs/f0x01/src/instructions/: commitment.rs  initialize.rs  mod.rs  session.rs  user.rs
programs/f0x01/src/state/: commitment.rs  mod.rs  program.rs  session.rs  user_profile.rs
tests/: 2user.ts  3commitment.ts  commitment.ts  f0x01.ts  initialize.ts  session.ts  user.ts
